Fix z-index for page content

--- a/src/components/page.less
+++ b/src/components/page.less
@@ -1,5 +1,8 @@
 @page-header-content-min-height: 32px;
 @page-header-button-spacing: 6px;
+@page-header-z-index: 1;
+@page-content-z-index: 0;
+@page-footer-z-index: 0;
 
 .Page {
   margin: 0;
@@ -18,6 +21,7 @@
   width: 100%;
   z-index: 1000;
   position: sticky;
+  z-index: @page-header-z-index;
   background-color: @grey-1;
   box-shadow: 0 2px 8px @grey-4;
   margin-bottom: @global-content-padding;
@@ -82,6 +86,8 @@
   flex: 1 0 0%;
   display: flex;
   align-items: flex-start;
+  position: relative;
+  z-index: @page-content-z-index;
 
   &.Page-contentArea--fullScreen {
     align-items: center;
@@ -106,6 +112,8 @@
   align-items: center;
   justify-content: center;
   padding: @global-content-padding;
+  position: relative;
+  z-index: @page-footer-z-index;
 }
 
 .Page-footerLine {
